--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,17 +8,17 @@
         <owl-carousel-o [options]="mainOptions">
             <ng-template carouselSlide>
                 <div class="main-slider">
-                    <img class=" h-100" src="../../../assets/main-slider/1.jpg" alt="">
+                    <img class=" h-100" src="assets/main-slider/1.jpg" alt="">
                 </div>
             </ng-template>
             <ng-template carouselSlide>
                 <div class="main-slider">
-                    <img class=" h-100" src="../../../assets/main-slider/2.jpg" alt="">
+                    <img class=" h-100" src="assets/main-slider/2.jpg" alt="">
                 </div>
             </ng-template>
             <ng-template carouselSlide>
                 <div class="main-slider">
-                    <img class=" h-100" src="../../../assets/main-slider/3.jpg" alt="">
+                    <img class=" h-100" src="assets/main-slider/3.jpg" alt="">
                 </div>
             </ng-template>
             
@@ -30,25 +30,25 @@
         <owl-carousel-o [options]="customOptions">
             <ng-template carouselSlide>
                 <div class="slider-container text-center m-3">
-                    <img src="./assets/slider/1.jpg" alt="">
+                    <img src="assets/slider/1.jpg" alt="">
                     <h3 class="my-2">Leather Men's Shoes</h3>
                 </div>
             </ng-template>
             <ng-template carouselSlide>
                 <div class="slider-container text-center m-3">
-                    <img src="./assets/slider/2.jpg" alt="">
+                    <img src="assets/slider/2.jpg" alt="">
                     <h3 class="my-2">Stylish Menswear</h3>
                 </div>
             </ng-template>
             <ng-template carouselSlide>
                 <div class="slider-container text-center m-3">
-                    <img src="./assets/slider/3.jpg" alt="">
+                    <img src="assets/slider/3.jpg" alt="">
                     <h3 class="my-2">Elite Mobiles and Accessories</h3>
                 </div>
             </ng-template>
             <ng-template carouselSlide>
                 <div class="slider-container text-center m-3">
-                    <img src="./assets/slider/4.jpg" alt="">
+                    <img src="assets/slider/4.jpg" alt="">
                     <h3 class="my-2">High Quality Electronics</h3>
                 </div>
             </ng-template>
